sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:11: error: illegal start of simple expression
    	while(j>=0 && !plusPetitQue(j,v)){
        ^